# SpringSaLaDpy_demo

./: .gitignore  README.md  analysis.ipynb  analysis.py  pyproject.toml  requirements.txt  simulate.py  simulation.ipynb  test.py  visualization.ipynb
.ipynb_checkpoints/: analysis-checkpoint.ipynb
Examples/: analysis(Nephrin-Nck-NWasp).ipynb  analysis(R_L).ipynb
Examples/Ferrihydrite-formation_SIMULATIONS/: Simulation0_SIM.txt
Examples/GUI_results/Nephrin-Nck-NWasp/: SS_demo.pptx
Examples/GUI_results/R_L_test_SIMULATIONS/: Simulation0_SIM.txt
Examples/GUI_results/R_L_test_difficult_SIMULATIONS/: Simulation0_SIM.txt
Examples/Nephrin-Nck-NWasp/: Final_version_test.txt
Examples/Nephrin-Nck-NWasp/Final_version_test_SIMULATIONS/: Simulation0_SIM.txt
Examples/Nephrin-Nck-NWasp/test-tutorial/: test-tutorial.txt
Examples/R_L_test_SIMULATIONS/Simulation0_SIM_SIMULATIONS/: Simulation0_SIM.txt
Examples/R_L_test_difficult_SIMULATIONS/Simulation0_SIM_SIMULATIONS/: Simulation0_SIM.txt
Examples/Simulate/: modified_input.ida  modified_input3.txt  simulation.ipynb
Examples/Simulate/modified_input_FOLDER/: modified_input.txt
Examples/Test_files/: reaction_test.txt
Examples/Visualize/: analysis.ipynb
GUI_results/R_L/Simulation0_SIM_SIMULATIONS/: Simulation0_SIM.txt
Simulate/: modified_input.ida  modified_input.txt  modified_input4.txt
Simulate/modified_input_FOLDER/: modified_input.txt
Simulate/modified_input_FOLDER/viewer_files/: modified_input_VIEW_Run0.txt  modified_input_VIEW_Run1.txt  (+3 more)
demo_simulation/: modified_input.ida  modified_input.txt
(+1059 files in other folders)
